--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=725,716
+ViewportId=0x16723995
 Size=400,400
 Collapsed=0
 
@@ -9,29 +10,35 @@ Size=441,221
 Collapsed=0
 
 [Window][Viewport]
-Pos=405,0
-Size=1515,606
+Pos=254,24
+Size=1666,676
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][WindowOverViewport_11111111]
-Pos=0,0
-Size=1920,1009
+Pos=0,24
+Size=1920,985
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=0,0
-Size=403,1009
+Pos=0,24
+Size=252,985
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Assets]
-Pos=405,608
-Size=1515,401
+Pos=254,702
+Size=1666,307
 Collapsed=0
 DockId=0x00000002,0
 
-[Table][0xB3D9C7CE,14]
+[Window][Project Manager]
+ViewportPos=176,260
+ViewportId=0xA72D1781
+Size=1500,769
+Collapsed=0
+
+[Table][0xB3D9C7CE,15]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
@@ -46,11 +53,12 @@ Column 10 Weight=1.0000
 Column 11 Weight=1.0000
 Column 12 Weight=1.0000
 Column 13 Weight=1.0000
+Column 14 Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=0,23 Size=1920,1009 Split=X Selected=0xC450F867
-  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=403,540 Selected=0xBABDAE5E
-  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=585,540 Split=Y Selected=0xC450F867
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1515,606 CentralNode=1 Selected=0xC450F867
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1515,401 Selected=0x42C24103
+DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=0,47 Size=1920,985 Split=X Selected=0xC450F867
+  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=252,985 Selected=0xBABDAE5E
+  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=736,985 Split=Y Selected=0xC450F867
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1501,676 CentralNode=1 Selected=0xC450F867
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1501,307 Selected=0x42C24103
 
