Got rid of possible copyright infringement

--- a/imgui.ini
+++ b/imgui.ini
@@ -33,8 +33,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Project Manager]
-ViewportPos=176,260
-ViewportId=0xA72D1781
+Pos=176,237
 Size=1500,769
 Collapsed=0
 
