More project stuff

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,8 +10,8 @@ Size=441,221
 Collapsed=0
 
 [Window][Viewport]
-Pos=254,24
-Size=1666,676
+Pos=354,24
+Size=1566,644
 Collapsed=0
 DockId=0x00000001,0
 
@@ -22,22 +22,22 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,24
-Size=252,985
+Size=352,985
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Assets]
-Pos=254,702
-Size=1666,307
+Pos=354,670
+Size=1566,339
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Project Manager]
-Pos=176,237
-Size=1500,769
+Pos=50,32
+Size=1746,936
 Collapsed=0
 
-[Table][0xB3D9C7CE,15]
+[Table][0xB3D9C7CE,14]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
@@ -52,12 +52,11 @@ Column 10 Weight=1.0000
 Column 11 Weight=1.0000
 Column 12 Weight=1.0000
 Column 13 Weight=1.0000
-Column 14 Weight=1.0000
 
 [Docking][Data]
 DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=0,47 Size=1920,985 Split=X Selected=0xC450F867
-  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=252,985 Selected=0xBABDAE5E
-  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=736,985 Split=Y Selected=0xC450F867
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1501,676 CentralNode=1 Selected=0xC450F867
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1501,307 Selected=0x42C24103
+  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=352,985 Selected=0xBABDAE5E
+  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=1566,985 Split=Y
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1501,644 CentralNode=1 Selected=0xC450F867
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1501,339 Selected=0x42C24103
 
