Project Manager basically done:

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,8 +10,8 @@ Size=441,221
 Collapsed=0
 
 [Window][Viewport]
-Pos=354,24
-Size=1566,644
+Pos=374,24
+Size=1546,727
 Collapsed=0
 DockId=0x00000001,0
 
@@ -22,19 +22,19 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,24
-Size=352,985
+Size=372,985
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Assets]
-Pos=354,670
-Size=1566,339
+Pos=374,753
+Size=1546,256
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Project Manager]
-Pos=50,32
-Size=1746,936
+Pos=605,252
+Size=1312,612
 Collapsed=0
 
 [Table][0xB3D9C7CE,14]
@@ -55,8 +55,8 @@ Column 13 Weight=1.0000
 
 [Docking][Data]
 DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=0,47 Size=1920,985 Split=X Selected=0xC450F867
-  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=352,985 Selected=0xBABDAE5E
-  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=1566,985 Split=Y
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1501,644 CentralNode=1 Selected=0xC450F867
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1501,339 Selected=0x42C24103
+  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=372,985 Selected=0xBABDAE5E
+  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=1546,985 Split=Y Selected=0xC450F867
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=616,258 CentralNode=1 Selected=0xC450F867
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=616,256 Selected=0x42C24103
 
