Made project a binary format

--- a/imgui.ini
+++ b/imgui.ini
@@ -33,8 +33,9 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Project Manager]
-Pos=156,98
-Size=801,338
+ViewportPos=216,181
+ViewportId=0xA72D1781
+Size=1086,634
 Collapsed=0
 
 [Table][0xB3D9C7CE,5]
@@ -45,7 +46,7 @@ Column 3  Weight=1.0000
 Column 4  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=216,263 Size=990,516 Split=X Selected=0xC450F867
+DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=60,107 Size=990,516 Split=X Selected=0xC450F867
   DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=367,985 Selected=0xBABDAE5E
   DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=1551,985 Split=Y Selected=0xC450F867
     DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1601,644 CentralNode=1 Selected=0xC450F867
