--- a/imgui.ini
+++ b/imgui.ini
@@ -10,25 +10,25 @@ Size=441,221
 Collapsed=0
 
 [Window][Viewport]
-Pos=368,24
-Size=622,240
+Pos=367,24
+Size=1553,592
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,24
-Size=990,516
+Size=1920,985
 Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,24
-Size=366,516
+Size=365,985
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Assets]
-Pos=368,266
-Size=622,274
+Pos=367,618
+Size=1553,391
 Collapsed=0
 DockId=0x00000002,0
 
@@ -38,17 +38,26 @@ ViewportId=0xA72D1781
 Size=873,436
 Collapsed=0
 
-[Table][0xB3D9C7CE,5]
+[Table][0xB3D9C7CE,14]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 Column 4  Weight=1.0000
+Column 5  Weight=1.0000
+Column 6  Weight=1.0000
+Column 7  Weight=1.0000
+Column 8  Weight=1.0000
+Column 9  Weight=1.0000
+Column 10 Weight=1.0000
+Column 11 Weight=1.0000
+Column 12 Weight=1.0000
+Column 13 Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=242,289 Size=990,516 Split=X Selected=0xC450F867
-  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=366,985 Selected=0xBABDAE5E
-  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=1552,985 Split=Y Selected=0xC450F867
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1145,575 CentralNode=1 Selected=0xC450F867
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1145,274 Selected=0x42C24103
+DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=0,47 Size=1920,985 Split=X Selected=0xC450F867
+  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=365,985 Selected=0xBABDAE5E
+  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=1553,985 Split=Y
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1552,592 CentralNode=1 Selected=0xC450F867
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1552,391 Selected=0x42C24103
 
