--- a/imgui.ini
+++ b/imgui.ini
@@ -10,44 +10,59 @@ Size=441,221
 Collapsed=0
 
 [Window][Viewport]
-Pos=367,24
-Size=623,123
+Pos=361,24
+Size=1174,559
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,24
-Size=990,516
+Size=1920,985
 Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,24
-Size=365,516
+Size=359,985
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Assets]
-Pos=367,149
-Size=623,391
+Pos=361,585
+Size=1174,424
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Project Manager]
-Pos=1189,958
+ViewportPos=1044,564
+ViewportId=0xA72D1781
 Size=873,436
 Collapsed=0
 
-[Table][0xB3D9C7CE,5]
+[Window][Inspector]
+Pos=1537,24
+Size=383,985
+Collapsed=0
+DockId=0x00000006,0
+
+[Table][0xB3D9C7CE,11]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 Column 4  Weight=1.0000
+Column 5  Weight=1.0000
+Column 6  Weight=1.0000
+Column 7  Weight=1.0000
+Column 8  Weight=1.0000
+Column 9  Weight=1.0000
+Column 10 Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x08BD597D Window=0x1BBC0F80 Pos=438,435 Size=990,516 Split=X Selected=0xC450F867
-  DockNode    ID=0x00000003 Parent=0x08BD597D SizeRef=365,985 Selected=0xBABDAE5E
-  DockNode    ID=0x00000004 Parent=0x08BD597D SizeRef=1553,985 Split=Y
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1552,592 CentralNode=1 Selected=0xC450F867
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1552,391 Selected=0x42C24103
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,47 Size=1920,985 Split=X Selected=0xC450F867
+  DockNode      ID=0x00000003 Parent=0x08BD597D SizeRef=359,985 Selected=0xBABDAE5E
+  DockNode      ID=0x00000004 Parent=0x08BD597D SizeRef=1559,985 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1535,985 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1552,559 CentralNode=1 Selected=0xC450F867
+      DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=1552,424 Selected=0x42C24103
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=383,985 Selected=0x36DC96AB
 
